--- a/estilos.css
+++ b/estilos.css
@@ -145,3 +145,65 @@ body {
         top: 0px;
     }
 }
+
+.gameOver {
+    z-index: 100;
+    position: fixed;
+    top: -100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 100px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-shadow: 3px 3px 0px red, -3px 3px 0px red, -3px -3px 0px red, 3px -3px 0px red;
+    transition: all 2s;
+}
+
+.gameOver::before {
+    z-index: 2;
+    content: '';
+    position: absolute;
+    top: -25;
+    left: -50px;
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: red;
+    animation: infinite 2s linear rotate;
+}
+
+.gameOver::after {
+    z-index: 2;
+    content: '';
+    position: absolute;
+    bottom: -25px;
+    right: -50px;
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: red;
+    animation: infinite 2s linear rotate;
+}
+
+@keyframes rotate {
+    0% {
+        border-radius: 5px 0px 40px 10px;
+        transform: rotate(0deg);
+    }
+    20% {
+        border-radius: 15px 10px 30px 20px;
+    }
+    40% {
+        border-radius: 25px 20px 20px 30px;
+    }
+    60% {
+        border-radius: 35px 30px 10px 40px;
+    }
+    80% {
+        border-radius: 15px 40px 50px 50px;
+    }
+    100% {
+        border-radius: 5px 0px 40px 10px;
+        transform: rotate(360deg);
+    }
+}
